[package]
name = "runpod-rust"
version = "0.1.0"
edition = "2018"
authors = ["Your Name <you@example.com>"]
description = "A Rust implementation of runpod-python"
license = "MIT" # or any other license you're using

[dependencies]
# Add your dependencies here, e.g.
backoff = "0.3"
image = "0.23"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
indicatif = "0.16"
rusoto = { version = "0.47", default-features = false, features = ["s3", "sts"] }
hyper = "0.14"
actix-web = "4.0"
log = "0.4"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }